--- a/web/templates/view_demands.html
+++ b/web/templates/view_demands.html
@@ -15,7 +15,7 @@
                         <th>描述</th>
                         <th>区县</th>
                         <th>地铁线</th>
-                        <th>价格区间(元/月)</th>
+                        <th>价格区间</th>
                         <th>发布日期</th>
                         <th style="width: 40px"></th>
                     </tr>
@@ -40,7 +40,7 @@
                             {{f.subway.name}}
                         </td>
                         <td>
-                            {{f.price_low}}~{{f.price_high}}
+                            {{f.price_low}}~{{f.price_high}}元/月
                         </td>
                         <td>
                             {{f.date}}
