--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>- 爱租房</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.4 -->
@@ -40,9 +40,43 @@
 
     <link rel="stylesheet" href="/bd/web/plugins/Font-Awesome-3.2.1/css/font-awesome.min.css" />
     <script src="/bd/web/static/base.js"></script>
+    <style>
+        html, body { font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;}
+        ul, ol { padding: 0;}
+        .banner { position: relative; overflow: auto; text-align: center;}
+        .banner li { list-style: none; }
+        .banner ul li { float: left; }
+    </style>
 </head>
 
 <body class="skin-blue sidebar-mini">
+<style>
+#b04 { width: 640px;}
+#b04 .dots { position: absolute; left: 0; right: 0; bottom: 20px;}
+#b04 .dots li
+{
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin: 0 4px;
+	text-indent: -999em;
+	border: 2px solid #fff;
+	border-radius: 6px;
+	cursor: pointer;
+	opacity: .4;
+	-webkit-transition: background .5s, opacity .5s;
+	-moz-transition: background .5s, opacity .5s;
+	transition: background .5s, opacity .5s;
+}
+#b04 .dots li.active
+{
+	background: #fff;
+	opacity: 1;
+}
+#b04 .arrow { position: absolute; top: 200px;}
+#b04 #al { left: 15px;}
+#b04 #ar { right: 15px;}
+</style>
 <div class="wrapper">
     <!-- header -->
     <header class="main-header">
@@ -257,6 +291,7 @@
 <script src="/bd/web/AdminLTE/bootstrap/js/jquery.chart.js"></script>
 <script src="/bd/web/AdminLTE/plugins/jQuery/jQuery-2.1.4.min.js"></script>
 <script src="/bd/web/AdminLTE/bootstrap/js/jquery.luara.0.0.1.min.js"></script>
+<script src="/bd/web/AdminLTE/bootstrap/js/unslider.min.js"></script>
 <!-- jQuery UI 1.11.2 -->
 <script src="/bd/web/static/jquery-ui.min.js" type="text/javascript"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
