--- a/web/templates/bulletin.html
+++ b/web/templates/bulletin.html
@@ -10,7 +10,7 @@
         <span class="c_888 f12">{{bulletin.source}}</span>
         &nbsp;&nbsp;&nbsp;
         {% if current_user.role_id == 1 or current_user.id == bulletin.author_id %}
-        <a href="/bd/view_bulletin?id={{bulletin.id}}"><i class="icon1"></i>编辑</a>
+       <a class="btn btn-app" href="/bd/view_bulletin?id={{bulletin.id}}"><i class="fa fa-edit"></i> 编辑</a>
         {% endif %}
     </div>
 </div>
