--- a/web/templates/new_function.html
+++ b/web/templates/new_function.html
@@ -6,21 +6,17 @@
         <div class="row">
             <div class="column">
                 <div class="ui container segment">
-                    <div class="ui compact menu">
-                        <div class="ui simple dropdown item">
-                            区域
-                            <i class="dropdown icon"></i>
-                            <div class="menu" style=" overflow:scroll; width:60px; height:300px;">
-                                {% for area in areas%}
-                                {%if area_id == area.id%}{%else%}<a href="/bd/new_function?area_id={{area.id}}">{%endif%}
-                                <div class="item" id="{{area.id}}">{{area.name}}</div>
-                                    </a>
-                                {% endfor %}
-                            </div>
-                        </div>
+                    <div class="menu">
+                        <select class="ui simple dropdown item" id="test">
+                            {% for area in areas %}
+                            <option value="{{area.id}}" class="item">{{area.name}}</option>
+                            {% endfor%}
+                        </select>
+                        &nbsp;&nbsp;&nbsp;
+                        <button class="ui teal basic button" id="yes">确定</button>
                     </div>
+                    <div class="ui container" id="chart1"></div>
                 </div>
-                <div class="ui container" id="chart1"></div>
             </div>
         </div>
     </div>
@@ -29,28 +25,55 @@
 {% endblock %}
 {% block script %}
 <script>
-    $('#menu').click(function () {
+    $(function(){
+        $("#test").change(function(){
+            $.ajax({
+                type : "post",
+                url : "/bd/new_function",
+                cache:false,
+                data : {'area_id':$("#test").val()},
+                dataType : "String"
+            });
+        });
+    });
+</script>
+<script>
+    $(function(){
+        $("#test").change(function(){
+            $.ajax({
+                type : "get",
+                url : "/bd/new_function",
+                cache:false,
+            });
+        }
+    }
+</script>
+<script>
+    $('#test').click(function () {
         $('.ui.sidebar').sidebar('toggle');
     });
 </script>
 <script>
-    $('#{{area_id}}').click(function () {
+    $('#test').change(function() {
+        parent.location.reload()
+    });
+
+</script>
+<script>
+    $('#yes').click(function () {
         $('#chart1').highcharts({
             chart: {
                 type: 'column'
-            },
-            credits: {
-                enabled: false
             },
             title: {
                 text: '{{area_name}}房屋租金分布'
             },
             xAxis: {
-                categories: ['租金']
+                categories: ['低于600元', '600-1000元', '1000-1500元', '1500-2000元', '2000-3000元', '3000-5000元', '5000-8000元']
             },
             yAxis: {
                 title: {
-                    text: '{{area_name}}房屋租金分布数量'
+                    text: '{{area_name}}房屋租金分布'
                 }
             },
             series: [
@@ -70,4 +93,5 @@
     });
     });
 </script>
+
 {% endblock %}
