--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -97,49 +97,7 @@
             </a>
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
-                    {% if current_user.is_authenticated() %}
-                    <li class="dropdown notifications-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-bell-o"></i>
-                            <span class="label label-warning">10</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li class="header">You have 10 notifications</li>
-                            <li>
-                                <!-- inner menu: contains the actual data -->
-                                <ul class="menu">
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-warning text-yellow"></i> Very long description here that may not fit into the
-                                            page and may cause design problems
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-users text-red"></i> 5 new members joined
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-shopping-cart text-green"></i> 25 sales made
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fa fa-user text-light-blue"></i> You changed your username
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="footer"><a href="#">View all</a></li>
-                        </ul>
-                    </li>
-                    {% endif %}
+
                     <!-- User Account: style can be found in dropdown.less -->
                     <!-- user account photo view -->
                     {% if current_user.is_anonymous() %}<li><a href="{{ url_for('login') }}">登陆</a></li> {% endif %}
@@ -163,9 +121,9 @@
                             <li class="user-footer">
                                 <div class="pull-left">
                                     {%if current_user.is_authenticated()%}
-                                    <a href="{{ url_for('info') }}" >个人信息</a>
+                                    <a href="{{ url_for('info') }}" >个人中心</a>
                                     {% else %}
-                                    <a href="#" >个人信息</a>
+                                    <a href="#" >个人中心</a>
                                     {% endif %}
                                 </div>
                                 <div class="pull-right">
@@ -209,7 +167,7 @@
             <!-- search form -->
             <form action="#" method="get" class="sidebar-form">
                 <div class="input-group">
-                    <input type="text" name="q" class="form-control" placeholder="请输入区域"/>
+                    <input type="text" name="q" class="form-control" placeholder="请输入关键词"/>
               <span class="input-group-btn">
                 <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
               </span>
@@ -221,35 +179,33 @@
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="header">导航</li>
-                <li class="active"><a href="/bd/view_demands"><i class="fa fa-circle-o"></i> 所有求租信息
+                <li class="active"><a href="/bd/view_demands"><i class="fa fa-bars"></i> 所有求租信息
                     {% if form and form.demand_count %}
                     <small class="label pull-right bg-yellow">{{form.demand_count}}</small>
                     {%  endif %}
                 </a></li>
-                <li class="active"><a href="/bd/view_rents"><i class="fa fa-circle-o"></i> 所有出租信息
+                <li class="active"><a href="/bd/view_rents"><i class="fa fa-bars"></i> 所有出租信息
                     {% if form and form.rent_count %}
                     <small class="label pull-right bg-yellow">{{form.rent_count}}</small>
                     {%  endif %}
                 </a></li>
-                <li class="active"><a href="/bd/view_bulletins"><i class="fa fa-circle-o"></i> 新闻公告列表
+                <li class="active"><a href="/bd/view_bulletins"><i class="fa fa-bars"></i> 新闻公告列表
                     {% if form and form.bulletin_count %}
                     <small class="label pull-right bg-yellow">{{form.bulletin_count}}</small>
                     {%  endif %}
                 </a></li>
-                {% if current_user.role_id == 1 %}<li class="active"><a href="/bd/view_accounts"><i class="fa fa-circle-o"></i> 用户帐号列表
+                {% if current_user.role_id == 1 %}<li class="active"><a href="/bd/view_accounts"><i class="fa fa-bars"></i> 用户帐号列表
                 {% if form and form.user_count %}
                 <small class="label pull-right bg-yellow">{{form.user_count}}</small>
                 {%  endif %}
                 {% endif %}
             </a></li>
                 {% if current_user.is_authenticated() %}<li class="header">编辑</li>{% endif %}
-                {% if current_user.role_id == 1 or current_user.role_id == 2 %}<li class="active"><a href="/bd/view_demand"><i class="fa fa-circle-o"></i> 新建求租信息</a></li>{% endif %}
-                {% if current_user.role_id == 1 or current_user.role_id == 3 %}<li class="active"><a href="/bd/view_rent"><i class="fa fa-circle-o"></i> 新建出租信息</a></li>{% endif %}
-                {% if current_user.role_id == 1 %}<li class="active"><a href="/bd/view_bulletin"><i class="fa fa-circle-o"></i> 新建公告</a></li>{% endif %}
+                {% if current_user.role_id == 1 or current_user.role_id == 2 %}<li class="active"><a href="/bd/view_demand"><i class="fa fa-edit"></i> 新建求租信息</a></li>{% endif %}
+                {% if current_user.role_id == 1 or current_user.role_id == 3 %}<li class="active"><a href="/bd/view_rent"><i class="fa fa-edit"></i> 新建出租信息</a></li>{% endif %}
+                {% if current_user.role_id == 1 %}<li class="active"><a href="/bd/view_bulletin"><i class="fa fa-edit"></i> 新建公告</a></li>{% endif %}
                 <li class="header">新功能</li>
-                <li><a href="/bd/new_function"><i class="fa fa-circle-o text-red"></i> <span>房屋租金分布</span></a></li>
-                <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>新功能2</span></a></li>
-                <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>新功能3</span></a></li>
+                <li><a href="/bd/new_function"><i class="fa fa-bar-chart"></i> <span>房屋租金分布</span></a></li>
             </ul>
         </section>
         <!-- /.sidebar -->
