--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -205,7 +205,7 @@
                 {% if current_user.role_id == 1 or current_user.role_id == 3 %}<li class="active"><a href="/bd/view_rent"><i class="fa fa-edit"></i> 新建出租信息</a></li>{% endif %}
                 {% if current_user.role_id == 1 %}<li class="active"><a href="/bd/view_bulletin"><i class="fa fa-edit"></i> 新建公告</a></li>{% endif %}
                 <li class="header">新功能</li>
-                <li><a href="/bd/new_function"><i class="fa fa-bar-chart"></i> <span>房屋租金分布</span></a></li>
+                <li><a href="/bd/area_distribution"><i class="fa fa-bar-chart"></i> <span>房屋租金分布</span></a></li>
             </ul>
         </section>
         <!-- /.sidebar -->
